codama-macros/tests/codama_attribute/error_directive/too_many_messages.fail.rs
use codama_macros::codama;

#[codama(error("hello", "world"))]
pub struct Test;

#[codama(error(message = "hello", message = "world"))]
pub struct TestExplicit;

fn main() {}
